test/domains/compilerErrors/initDomainWithNonDomain.chpl
config const N = 10;

var aDom: domain = 5.67;
writeln(aDom.type:string);

var aDom2: domain = 0..#N;
writeln(aDom2.type:string);
